--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,7 @@
 import YukinaConfig from "../../yukina.config";
 import GlobalStyles from "./GlobalStyles.astro";
 import ScriptSetup from "./ScriptSetup.astro";
+import SakuraEffect from "./SakuraEffect.astro";
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
@@ -59,3 +60,4 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 <GlobalStyles />
 <ScriptSetup />
+<SakuraEffect />
