fix: 修改 profile 响应方式，取消隐藏

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -53,8 +53,12 @@ const props = Astro.props;
   }
 
   .side-bar {
-    @apply hidden min-w-[248px] xl:block;
+    @apply hidden min-w-[248px] lg:block;
   }
+
+  /* .side-bar {
+    @apply hidden min-w-[248px] xl:block;
+  } */
 
   .content {
     @apply xl:w-[calc(var(--page-width-xl)-264px)];
