--- a/src/components/mdx/Warning.astro
+++ b/src/components/mdx/Warning.astro
@@ -1,7 +1,33 @@
----
-import AlertBase from "./alerts/AlertBase.astro";
----
+---  
+export interface Props {  
+  children: any;  
+}  
+---  
+  
+<div class="warning-component my-4 p-4 rounded-xl bg-[var(--card-color)] border-l-4 border-orange-500 shadow-sm">  
+  <div class="flex items-start gap-3">  
+    <div class="flex-shrink-0 w-5 h-5 mt-0.5">  
+      <svg viewBox="0 0 20 20" fill="currentColor" class="text-orange-500">  
+        <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />  
+      </svg>  
+    </div>  
+    <div class="flex-1 text-[var(--text-color)]">  
+      <slot />  
+    </div>  
+  </div>  
+</div>  
+  
+<style>  
+  .warning-component {  
+    background-color: oklch(95% 0.08 40 / 0.95);  
+  }  
 
-<AlertBase type="warning" icon="lucide:alert-triangle">
-  <slot />
-</AlertBase>
+  /* 暗色主题适配 */
+  :root.dark .warning-component {
+    background-color: rgba(80, 45, 15, 0.75);
+  }
+
+  :root.dark .warning-component svg {
+    color: #fb923c;
+  }
+</style>
